Use nextalign, add multiple profiles

--- a/wa_profiles/wa-rhino/config.yaml
+++ b/wa_profiles/wa-rhino/config.yaml
@@ -5,7 +5,7 @@
 
 configfile:
   - wa_profiles/wa/builds.yaml
-  - wa_profiles/wa/custom_rules.yaml
+  - wa_profiles/wa/input.yaml
 
 # Always print the commands that will be run to the screen for debugging.
 printshellcmds: True
