Fix label to PANGO lineage

--- a/wa_profiles/wa/auspice_config.json
+++ b/wa_profiles/wa/auspice_config.json
@@ -31,7 +31,7 @@
     },
     {
       "key": "pango_lineage",
-      "title": "Pangolin lineage",
+      "title": "PANGO lineage",
       "type": "categorical"
     },
     {
