--- a/wa_profiles/wa/builds.yaml
+++ b/wa_profiles/wa/builds.yaml
@@ -18,33 +18,33 @@ files:
 
 # Define WA builds.
 builds:
-  wa_mar20-jun20:
-    title: "Washington-focused SARS-CoV-2 genomic analysis: Through June 2020"
-    colors: wa_profiles/wa/colors.tsv
-    description: wa_profiles/wa/descriptions/mar20-jun20_description.md
-    division: Washington
-    latest_date: 2020-06-30
-    subsampling_scheme: early
+#  wa_mar20-jun20:
+#    title: "Washington-focused SARS-CoV-2 genomic analysis: Through June 2020"
+#    colors: wa_profiles/wa/colors.tsv
+#    description: wa_profiles/wa/descriptions/mar20-jun20_description.md
+#    division: Washington
+#    latest_date: 2020-06-30
+#    subsampling_scheme: early
 
-  wa_jul20-oct20:
-    title: "Washington-focused SARS-CoV-2 genomic analysis: July-October 2020"
-    colors: wa_profiles/wa/colors.tsv
-    description: wa_profiles/wa/descriptions/jul20-oct20_description.md
-    division: Washington
-    earliest_date: 2020-07-01
-    latest_date: 2020-10-31
-    n_sequences: 1250
-    subsampling_scheme: month
+#  wa_jul20-oct20:
+#    title: "Washington-focused SARS-CoV-2 genomic analysis: July-October 2020"
+#    colors: wa_profiles/wa/colors.tsv
+#    description: wa_profiles/wa/descriptions/jul20-oct20_description.md
+#    division: Washington
+#    earliest_date: 2020-07-01
+#    latest_date: 2020-10-31
+#    n_sequences: 1250
+#    subsampling_scheme: month
 
-  wa_nov20-feb21:
-    title: "Washington-focused SARS-CoV-2 genomic analysis: November 2020-February 2021"
-    colors: wa_profiles/wa/colors.tsv
-    description: wa_profiles/wa/descriptions/nov20-feb21_description.md
-    division: Washington
-    earliest_date: 2020-11-01
-    latest_date: 2021-02-28
-    n_sequences: 3750
-    subsampling_scheme: month
+#  wa_nov20-feb21:
+#    title: "Washington-focused SARS-CoV-2 genomic analysis: November 2020-February 2021"
+#    colors: wa_profiles/wa/colors.tsv
+#    description: wa_profiles/wa/descriptions/nov20-feb21_description.md
+#    division: Washington
+#    earliest_date: 2020-11-01
+#    latest_date: 2021-02-28
+#    n_sequences: 3750
+#    subsampling_scheme: month
 
   wa_4m:
     title: "Washington-focused SARS-CoV-2 genomic analysis: Past four months"
@@ -54,12 +54,12 @@ builds:
     n_sequences: 3750
     subsampling_scheme: time-window
 
-  wa_1y:
-    title: "Washington-focused SARS-CoV-2 genomic analysis: Past year"
-    colors: wa_profiles/wa/colors.tsv
-    description: wa_profiles/wa/descriptions/year_description.md
-    division: Washington
-    subsampling_scheme: one-year
+#  wa_1y:
+#    title: "Washington-focused SARS-CoV-2 genomic analysis: Past year"
+#    colors: wa_profiles/wa/colors.tsv
+#    description: wa_profiles/wa/descriptions/year_description.md
+#    division: Washington
+#    subsampling_scheme: one-year
 
 
 # Define subsampling scheme for builds. This scheme should include as much
@@ -144,7 +144,7 @@ subsampling:
       query: --query "(division != '{division}' & purpose_of_sequencing != 'S dropout')"
       priorities:
         type: proximity
-        focus: local-context-early
+        focus: local-focus
 
   month:
     # Subsampling for a given time window
