--- a/wa_profiles/wa/auspice_config.json
+++ b/wa_profiles/wa/auspice_config.json
@@ -35,6 +35,11 @@
       "type": "categorical"
     },
     {
+      "key": "S1_mutations",
+      "title": "S1 mutations",
+      "type": "continuous"
+    },
+    {
       "key": "GISAID_clade",
       "title": "GISAID Clade",
       "type": "categorical"
