--- a/wa_profiles/wa/builds.yaml
+++ b/wa_profiles/wa/builds.yaml
@@ -18,33 +18,43 @@ files:
 
 # Define WA builds.
 builds:
-#  wa_mar20-jun20:
-#    title: "Washington-focused SARS-CoV-2 genomic analysis: Through June 2020"
-#    colors: wa_profiles/wa/colors.tsv
-#    description: wa_profiles/wa/descriptions/mar20-jun20_description.md
-#    division: Washington
-#    latest_date: 2020-06-30
-#    subsampling_scheme: early
+  wa_mar20-jun20:
+    title: "Washington-focused SARS-CoV-2 genomic analysis: Through June 2020"
+    colors: wa_profiles/wa/colors.tsv
+    description: wa_profiles/wa/descriptions/mar20-jun20_description.md
+    division: Washington
+    latest_date: 2020-06-30
+    subsampling_scheme: early
 
-#  wa_jul20-oct20:
-#    title: "Washington-focused SARS-CoV-2 genomic analysis: July-October 2020"
-#    colors: wa_profiles/wa/colors.tsv
-#    description: wa_profiles/wa/descriptions/jul20-oct20_description.md
-#    division: Washington
-#    earliest_date: 2020-07-01
-#    latest_date: 2020-10-31
-#    n_sequences: 1250
-#    subsampling_scheme: month
+  wa_jul20-oct20:
+    title: "Washington-focused SARS-CoV-2 genomic analysis: July-October 2020"
+    colors: wa_profiles/wa/colors.tsv
+    description: wa_profiles/wa/descriptions/jul20-oct20_description.md
+    division: Washington
+    earliest_date: 2020-07-01
+    latest_date: 2020-10-31
+    n_sequences: 1250
+    subsampling_scheme: month
 
-#  wa_nov20-feb21:
-#    title: "Washington-focused SARS-CoV-2 genomic analysis: November 2020-February 2021"
-#    colors: wa_profiles/wa/colors.tsv
-#    description: wa_profiles/wa/descriptions/nov20-feb21_description.md
-#    division: Washington
-#    earliest_date: 2020-11-01
-#    latest_date: 2021-02-28
-#    n_sequences: 3750
-#    subsampling_scheme: month
+  wa_nov20-feb21:
+    title: "Washington-focused SARS-CoV-2 genomic analysis: November 2020-February 2021"
+    colors: wa_profiles/wa/colors.tsv
+    description: wa_profiles/wa/descriptions/nov20-feb21_description.md
+    division: Washington
+    earliest_date: 2020-11-01
+    latest_date: 2021-02-28
+    n_sequences: 4000
+    subsampling_scheme: month
+
+  wa_mar21-jun21:
+    title: "Washington-focused SARS-CoV-2 genomic analysis: March 2021 on"
+    colors: wa_profiles/wa/colors.tsv
+    description: wa_profiles/wa/descriptions/mar21-jun21_description.md
+    division: Washington
+    earliest_date: 2021-03-01
+    latest_date: 2021-06-30
+    n_sequences: 3750
+    subsampling_scheme: month
 
   wa_4m:
     title: "Washington-focused SARS-CoV-2 genomic analysis: Past four months"
@@ -54,12 +64,12 @@ builds:
     n_sequences: 3750
     subsampling_scheme: time-window
 
-#  wa_1y:
-#    title: "Washington-focused SARS-CoV-2 genomic analysis: Past year"
-#    colors: wa_profiles/wa/colors.tsv
-#    description: wa_profiles/wa/descriptions/year_description.md
-#    division: Washington
-#    subsampling_scheme: one-year
+  wa_1y:
+    title: "Washington-focused SARS-CoV-2 genomic analysis: Past year"
+    colors: wa_profiles/wa/colors.tsv
+    description: wa_profiles/wa/descriptions/year_description.md
+    division: Washington
+    subsampling_scheme: one-year
 
 
 # Define subsampling scheme for builds. This scheme should include as much
@@ -77,7 +87,7 @@ subsampling:
     usa-context:
       # Evenly samples across time from the United States, excluding current division,until max-date.                                                                                                                                        # are that are genetically similar to the current division's sequences.
       group_by: "year month"
-      max_sequences: 2000
+      max_sequences: 1000
       max_date: --max-date {latest_date}
       query: --query "(country == 'USA' & division != '{division}')"
       priorities:
