--- a/wa_profiles/wa/builds.yaml
+++ b/wa_profiles/wa/builds.yaml
@@ -44,6 +44,7 @@ builds:
     earliest_date: 2020-11-01
     latest_date: 2021-02-28
     n_sequences: 4000
+    subclades: wa_profiles/wa/cdc_voi_voc.tsv
     subsampling_scheme: month
 
   wa_mar21-jun21:
@@ -54,6 +55,7 @@ builds:
     earliest_date: 2021-03-01
     latest_date: 2021-06-30
     n_sequences: 250
+    subclades: wa_profiles/wa/cdc_voi_voc.tsv
     subsampling_scheme: month
 
   wa_4m:
@@ -62,6 +64,7 @@ builds:
     description: wa_profiles/wa/descriptions/four-months_description.md
     division: Washington
     n_sequences: 3750
+    subclades: wa_profiles/wa/cdc_voi_voc.tsv
     subsampling_scheme: time-window
 
   wa_1y:
@@ -69,6 +72,7 @@ builds:
     colors: wa_profiles/wa/colors.tsv
     description: wa_profiles/wa/descriptions/year_description.md
     division: Washington
+    subclades: wa_profiles/wa/cdc_voi_voc.tsv
     subsampling_scheme: one-year
 
 
