--- a/wa_profiles/wa/builds.yaml
+++ b/wa_profiles/wa/builds.yaml
@@ -20,23 +20,23 @@ files:
 
 # Define WA builds.
 builds:
-#  wa_mar20-jun20:
-#    title: "Washington-focused SARS-CoV-2 genomic analysis: Through June 2020"
-#    colors: wa_profiles/wa/colors.tsv
-#    description: wa_profiles/wa/descriptions/mar20-jun20_description.md
-#    division: Washington
-#    latest_date: 2020-06-30
-#    subsampling_scheme: early
+  wa_mar20-jun20:
+    title: "Washington-focused SARS-CoV-2 genomic analysis: Through June 2020"
+    colors: wa_profiles/wa/colors.tsv
+    description: wa_profiles/wa/descriptions/mar20-jun20_description.md
+    division: Washington
+    latest_date: 2020-06-30
+    subsampling_scheme: early
 
-#  wa_jul20-oct20:
-#    title: "Washington-focused SARS-CoV-2 genomic analysis: July-October 2020"
-#    colors: wa_profiles/wa/colors.tsv
-#    description: wa_profiles/wa/descriptions/jul20-oct20_description.md
-#    division: Washington
-#    earliest_date: 2020-07-01
-#    latest_date: 2020-10-31
-#    n_sequences: 1250
-#    subsampling_scheme: month
+  wa_jul20-oct20:
+    title: "Washington-focused SARS-CoV-2 genomic analysis: July-October 2020"
+    colors: wa_profiles/wa/colors.tsv
+    description: wa_profiles/wa/descriptions/jul20-oct20_description.md
+    division: Washington
+    earliest_date: 2020-07-01
+    latest_date: 2020-10-31
+    n_sequences: 1250
+    subsampling_scheme: month
 
   wa_nov20-feb21:
     title: "Washington-focused SARS-CoV-2 genomic analysis: November 2020-February 2021"
