Add 2m build; shrink sample size of 4m build; update coloring; add lat + long; remove time window builds

--- a/wa_profiles/wa/auspice_config.json
+++ b/wa_profiles/wa/auspice_config.json
@@ -40,6 +40,11 @@
       "type": "continuous"
     },
     {
+      "key": "logistic_growth",
+      "title": "Logistic growth",
+      "type": "continuous"
+    },
+    {
       "key": "GISAID_clade",
       "title": "GISAID Clade",
       "type": "categorical"
