--- a/wa_profiles/wa/input.yaml
+++ b/wa_profiles/wa/input.yaml
@@ -10,6 +10,6 @@ inputs:
    # metadata: "s3://nextstrain-ncov-private/metadata_gisaid.tsv.gz"
    # sequences: "s3://nextstrain-ncov-private/sequences_gisaid.fasta.gz"
    # aligned: "s3://nextstrain-ncov-private/aligned_gisaid.fasta.xz"
-    to-exclude: "s3://nextstrain-ncov-private/to-exclude_gisaid.txt.xz"
-    masked: "s3://nextstrain-ncov-private/masked_gisaid.fasta.xz"
-   # filtered: "s3://nextstrain-ncov-private/filtered_gisaid.fasta.xz"
+   # to-exclude: "s3://nextstrain-ncov-private/to-exclude_gisaid.txt.xz"
+   # masked: "s3://nextstrain-ncov-private/masked_gisaid.fasta.xz"
+    filtered: "s3://nextstrain-ncov-private/filtered_gisaid.fasta.xz"
