--- a/wa_profiles/wa/builds.yaml
+++ b/wa_profiles/wa/builds.yaml
@@ -1,8 +1,3 @@
-# Define starting input. Will be overridden if input.yaml is listed as a
-# configfile in the config.yaml
-sequences: "data/sequences.fasta"
-metadata: "data/metadata.tsv"
-
 # Defines next align specs
 genes: ["ORF1a", "ORF1b", "S", "ORF3a", "M", "N"]
 use_nextalign: true
@@ -33,12 +28,12 @@ builds:
     division: Washington
     subsampling_scheme: four-month
 
-  wa_1y:
-    title: "Washington-focused SARS-CoV-2 genomic analysis: Past year"
-    colors: wa_profiles/wa/colors.tsv
-    description: wa_profiles/wa/descriptions/year_description.md
-    division: Washington
-    subsampling_scheme: one-year
+#  wa_1y:
+#    title: "Washington-focused SARS-CoV-2 genomic analysis: Past year"
+#    colors: wa_profiles/wa/colors.tsv
+#    description: wa_profiles/wa/descriptions/year_description.md
+#    division: Washington
+#    subsampling_scheme: one-year
 
 # remove S dropout sequences and sequences without division label in US
 filter:
