Sanitize default GISAID metadata and sequences
Adds configuration parameters and new arguments/flags to the sanitize
metadata and sequences scripts to convert default GISAID metadata and
sequences into a format expected by our workflows. The new sanitize
operations for metadata include renaming specific fields, standardizing
all other fields, parsing the single location field into separate
geographic scale fields (region, country, etc.), replacing whitespace in
strain names, and resolving duplicate records.

When resolving duplicate records, the script sorts records by strain
name and all available database accession fields, groups by strain name,
and takes the last record of each group. This approach allows us to
handle cases like GenBank metadata which include the GISAID accession
column but may be missing data for specific records in that column. In
the case where accessions are missing in all columns, this approach
defaults to the sane default of picking the last record per strain.

The new operations applied during metadata sanitization appear in the
script's help in the order that they are applied. The script's usage
text also reflects that the available operations are applied in the
order they appear in the help list. This order of operations is
important because some operations (e.g., standardize columns) change
values that other operations could depend on (e.g., renaming specific
columns).

We sanitize default GISAID sequences by replacing whitespace in strain
names and stripping out additional metadata that appears in the FASTA
defline.

--- a/defaults/parameters.yaml
+++ b/defaults/parameters.yaml
@@ -10,6 +10,13 @@ strip_strain_prefixes:
   - hCoV-19/
   - SARS-CoV-2/
 
+sanitize_metadata:
+  rename_fields:
+    - "Virus name=strain"
+    - "Collection date=date"
+  standardize_columns: true
+  parse_location_field: Location
+
 reference_node_name: "USA/WA1/2020"
 
 # Define files used for external configuration. Common examples consist of a
