--- a/wa_profiles/wa-external/input.yaml
+++ b/wa_profiles/wa-external/input.yaml
@@ -1,7 +1,7 @@
 
 inputs:
   - name: gisaid
-    metadata: "data/metadata.tsv"
+    metadata: "data/metadata.tsv.tar.xz"
    # sequences: "s3://nextstrain-ncov-private/sequences.fasta.gz"
    # Uncomment outputs to start the pipeline at that stage.
    # E.g. if you uncomment `filtered` then the pipeline
@@ -12,4 +12,4 @@ inputs:
    # aligned: "s3://nextstrain-ncov-private/aligned_gisaid.fasta.xz"
    # to-exclude: "s3://nextstrain-ncov-private/to-exclude_gisaid.txt.xz"
    # masked: "s3://nextstrain-ncov-private/masked_gisaid.fasta.xz"
-    sequences: "data/sequences.fasta"
+    sequences: "data/sequences.fasta.tar.xz"
